--- a/public/404.html
+++ b/public/404.html
@@ -31,10 +31,19 @@
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
 
+    .error404 {
+    min-height: 120vh;
+    background-size: cover;
+    background-position: center;
+  }
+
+
   .rails-default-error-page h1 {
     font-size: 100%;
-    color: #730E15;
+    color: #0a0404;
     line-height: 1.5em;
+    line-height: 1.5em;
+    margin: 0;
   }
 
   .rails-default-error-page div.dialog > p {
@@ -48,20 +57,21 @@
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
     border-top-color: #DADADA;
-    color: #666;
+    color: rgb(25, 6, 6);
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
   </style>
 </head>
 
 <body class="rails-default-error-page">
+  <div class="error404" style="background-image: url('/images/404.jpeg');">
+  <div>
+    <h1>The page you were looking for doesn't exist.</h1>
+    <p>You may have mistyped the address or the page may have moved.</p>
+  </div>
+</div>
+</div>
   <!-- This file lives in public/404.html -->
   <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
 </body>
 </html>
