fixed error pages

--- a/public/404.html
+++ b/public/404.html
@@ -63,7 +63,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="rails-default-error-page idk">
   <div class="error404" style="background-image: url('/images/404.jpeg');">
   <div>
     <h1>The page you were looking for doesn't exist.</h1>
