--- a/public/500.html
+++ b/public/500.html
@@ -62,7 +62,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="rails-default-error-page idk">
   <div class="error500" style="background-image: url('/images/500.jpeg');">
   <!-- This file lives in public/500.html -->
     <div>
