--- a/public/404.html
+++ b/public/404.html
@@ -64,7 +64,7 @@
 </head>
 
 <body class="rails-default-error-page idk">
-  <div class="error404" style="background-image: url('/images/404.jpeg');">
+  <div class="error404 idk" style="background-image: url('/images/404.jpeg');">
   <div>
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
