--- a/public/500.html
+++ b/public/500.html
@@ -63,7 +63,7 @@
 </head>
 
 <body class="rails-default-error-page idk">
-  <div class="error500" style="background-image: url('/images/500.jpeg');">
+  <div class="error500 idk" style="background-image: url('/images/500.jpeg');">
   <!-- This file lives in public/500.html -->
     <div>
       <h1>Whoops, something went wrong!</h1>
