--- a/public/404.html
+++ b/public/404.html
@@ -4,7 +4,7 @@
   <title>The page you were looking for doesn't exist (404)</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
-  .rails-default-error-page {
+  .idk {
     background-color: #EFEFEF;
     color: #2E2F30;
     text-align: center;
@@ -12,13 +12,13 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog {
+  .idk div.dialog {
     width: 95%;
     max-width: 33em;
     margin: 4em auto 0;
   }
 
-  .rails-default-error-page div.dialog > div {
+  .idk div.dialog > div {
     border: 1px solid #CCC;
     border-right-color: #999;
     border-left-color: #999;
@@ -38,7 +38,7 @@
   }
 
 
-  .rails-default-error-page h1 {
+  .idk h1 {
     font-size: 100%;
     color: #0a0404;
     line-height: 1.5em;
@@ -46,7 +46,7 @@
     margin: 0;
   }
 
-  .rails-default-error-page div.dialog > p {
+  .idk div.dialog > p {
     margin: 0 0 1em;
     padding: 1em;
     background-color: #F7F7F7;
@@ -63,8 +63,8 @@
   </style>
 </head>
 
-<body class="rails-default-error-page idk">
-  <div class="error404 idk" style="background-image: url('/images/404.jpeg');">
+<body class="idk">
+  <div class="error404" style="background-image: url('/images/404.jpeg');">
   <div>
     <h1>The page you were looking for doesn't exist.</h1>
     <p>You may have mistyped the address or the page may have moved.</p>
